edited with loop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <section>
-        <video autoplay muted>
+        <video autoplay muted loop>
             <source src="media/dogzzz.mp4" type="video/mp4">
             Your browser does not support HTML5 video. Please update your browser. 
         </video>
